tests/fixtures/invalid/pow_bool_str_bytes.py
# Cannot call pow() with Bool, Str, Bytes
x = pow(True, "hello", b"hello")
